--- a/CourseAI/CourseAI.csproj
+++ b/CourseAI/CourseAI.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\WeightedRandom.cs" />
+    <Compile Include="Genetics\Crossover.cs" />
     <Compile Include="Graphs\Graph.cs" />
     <Compile Include="Graphs\NFA.cs" />
     <Compile Include="Graphs\Searcher.cs" />
