--- a/CourseAI/CourseAI.csproj
+++ b/CourseAI/CourseAI.csproj
@@ -50,10 +50,14 @@
     <Compile Include="Helper\Randomness.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SoloStates\Adversarial.cs" />
+    <Compile Include="SoloStates\HillClimbing.cs" />
+    <Compile Include="SoloStates\IState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
