--- a/CourseAI/CourseAI.csproj
+++ b/CourseAI/CourseAI.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>CourseAI</RootNamespace>
     <AssemblyName>CourseAI</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LinearAlgebra">
+      <HintPath>..\..\..\..\..\Users\anak4_000\OneDrive\File Transfer\C# Class Libraries\LinearAlgebra.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,7 +50,9 @@
     <Compile Include="Graphs\Graph.cs" />
     <Compile Include="Graphs\NFA.cs" />
     <Compile Include="Graphs\Searcher.cs" />
+    <Compile Include="Helper\LinearExtensions.cs" />
     <Compile Include="Helper\Randomness.cs" />
+    <Compile Include="MachineLearning\KNearestNeighbors.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SoloStates\Adversarial.cs" />
